[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fft"
dynamic = ["version"]
authors = [
    {name = "Brandon Perkins", email = "bdperkin@gmail.com"},
]
maintainers = [
    {name = "Brandon Perkins", email = "bdperkin@gmail.com"},
]
description = "File Type Tester - Determine file types using filesystem, magic, and language tests"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-magic>=0.4.24",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/user/fft"
Repository = "https://github.com/user/fft.git"
Issues = "https://github.com/user/fft/issues"
Changelog = "https://github.com/user/fft/blob/main/CHANGELOG.md"
Contributing = "https://github.com/user/fft/blob/main/CONTRIBUTING.md"

[project.scripts]
fft = "fft:main"

[tool.setuptools]
py-modules = ["fft"]

[tool.setuptools.dynamic]
version = {attr = "fft.__version__"}
