[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fft"
dynamic = ["version"]
authors = [
    {name = "Brandon Perkins", email = "bdperkin@gmail.com"},
]
maintainers = [
    {name = "Brandon Perkins", email = "bdperkin@gmail.com"},
]
description = "File Type Tester - Determine file types using filesystem, magic, and language tests"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-magic>=0.4.24",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/bdperkin/fft"
Repository = "https://github.com/bdperkin/fft.git"
Issues = "https://github.com/bdperkin/fft/issues"
Changelog = "https://github.com/bdperkin/fft/blob/main/CHANGELOG.md"
Contributing = "https://github.com/bdperkin/fft/blob/main/CONTRIBUTING.md"

[project.scripts]
fft = "fft:main"

[tool.setuptools]
py-modules = ["fft"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.1", "*.texi", "*.info"]

[tool.setuptools.dynamic]
version = {attr = "fft.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=fft",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
